@@ -1,0 +1,161 @@
+[[0, ["start", 84], 0, 180, [null, 32]],
+[1, ["repeat", 21], 1148, 716, [11, 2, 8, 12]],
+[2, ["number", 4], 1207, 716, [1, null]],
+[3, ["storein", 0], 658, 514, [118, 4, 5, 57]],
+[4, ["string", "side"], 726, 514, [3, null]],
+[5, ["number", 96.0], 726, 556, [3, null]],
+[6, "box", 1237, 758, [8, 7, null]],
+[7, ["string", "side"], 1292, 758, [6, null]],
+[8, "forward", 1166, 758, [1, 6, 9]],
+[9, "right", 1166, 800, [8, 10, null]],
+[10, ["number", 90], 1224, 800, [9, null]],
+[11, "startfill", 1148, 674, [13, 1]],
+[12, "stopfill", 1148, 860, [1, null]],
+[13, ["hat", 93], 1130, 620, [null, 14, 11]],
+[14, ["string", "square"], 1186, 632, [13, null]],
+[15, "stack", 54, 1016, [80, 16, 49]],
+[16, ["string", "square"], 112, 1016, [15, null]],
+[17, ["repeat", 105], 36, 806, [47, 27, 48, 51]],
+[18, "seth", 54, 890, [48, 19, 22]],
+[19, ["random", 0], 153, 890, [18, 20, 21, null]],
+[20, ["number", -15], 239, 890, [19, null]],
+[21, ["number", 15], 239, 932, [19, null]],
+[22, ["vspace", 0], 54, 932, [18, 80]],
+[23, ["repeat", 177], 18, 722, [132, 26, 47, null]],
+[24, "width", 165, 806, [27, null]],
+[25, "height", 147, 722, [26, null]],
+[26, ["division2", 0], 77, 722, [23, 25, 28]],
+[27, ["division2", 0], 95, 806, [17, 24, 30]],
+[28, "box", 171, 764, [26, 29, null]],
+[29, ["string", "spacing"], 226, 764, [28, null]],
+[30, "box", 189, 848, [27, 31, null]],
+[31, ["string", "spacing"], 244, 848, [30, null]],
+[32, ["storein", 0], 18, 226, [0, 33, 34, 122]],
+[33, ["string", "spacing"], 86, 226, [32, null]],
+[34, ["number", 128.0], 86, 268, [32, null]],
+[35, ["setxy2", 20], 559, 711, [65, 38, 42, 66]],
+[36, "xcor", 671, 711, [38, null]],
+[37, "ycor", 1009, 799, [39, null]],
+[38, ["plus2", 0], 617, 711, [35, 36, 55]],
+[39, ["plus2", 0], 955, 799, [40, 37, 53]],
+[40, ["setxy2", 20], 897, 717, [63, 62, 39, 64]],
+[41, "leftpos", 1009, 717, [62, null]],
+[42, "ycor", 617, 793, [35, null]],
+[43, ["hat", 83], 541, 615, [null, 44, 65]],
+[44, ["string", "inc x"], 597, 627, [43, null]],
+[45, ["hat", 83], 879, 621, [null, 46, 63]],
+[46, ["string", "inc y"], 935, 633, [45, null]],
+[47, ["vspace", 0], 36, 764, [23, 17]],
+[48, ["vspace", 0], 54, 848, [17, 18]],
+[49, "stack", 54, 1058, [15, 50, null]],
+[50, ["string", "inc x"], 112, 1058, [49, null]],
+[51, "stack", 36, 1118, [17, 52, null]],
+[52, ["string", "inc y"], 94, 1118, [51, null]],
+[53, "box", 1009, 841, [39, 54, null]],
+[54, ["string", "spacing"], 1064, 841, [53, null]],
+[55, "box", 671, 753, [38, 56, null]],
+[56, ["string", "spacing"], 726, 753, [55, null]],
+[57, ["storein", 0], 658, 598, [3, 58, 59, 138]],
+[58, ["string", "offset"], 726, 598, [57, null]],
+[59, ["number", 16.0], 726, 640, [57, null]],
+[60, "box", 1009, 759, [62, 61, null]],
+[61, ["string", "offset"], 1064, 759, [60, null]],
+[62, ["plus2", 0], 955, 717, [40, 41, 60]],
+[63, "penup", 897, 675, [45, 40]],
+[64, "pendown", 897, 841, [40, null]],
+[65, "penup", 559, 669, [43, 35]],
+[66, "pendown", 559, 835, [35, null]],
+[67, "setcolor", 318, 276, [69, 71, 74]],
+[68, "setgray", 318, 360, [74, 77, null]],
+[69, "setshade", 318, 234, [75, 70, 67]],
+[70, ["number", 50], 403, 234, [69, null]],
+[71, ["random", 0], 395, 276, [67, 72, 73, null]],
+[72, ["number", 5], 481, 276, [71, null]],
+[73, ["number", 15], 481, 318, [71, null]],
+[74, ["vspace", 0], 318, 318, [67, 68]],
+[75, ["hat", 63], 300, 180, [null, 76, 69]],
+[76, ["string", "color 1"], 356, 192, [75, null]],
+[77, ["random", 0], 391, 360, [68, 78, 79, null]],
+[78, ["number", 80], 477, 360, [77, null]],
+[79, ["number", 100], 477, 402, [77, null]],
+[80, "stack", 54, 974, [22, 92, 15]],
+[81, ["string", "color 1"], 386, 724, [90, null]],
+[82, ["hat", 311], 0, 460, [null, 83, 128]],
+[83, ["string", "grid"], 56, 472, [82, null]],
+[84, ["hat", 63], 940, 180, [null, 85, 94]],
+[85, ["string", "color 3"], 996, 192, [84, null]],
+[86, ["hat", 63], 620, 180, [null, 87, 105]],
+[87, ["string", "color 2"], 676, 192, [86, null]],
+[88, "stack", 318, 766, [90, 89, null]],
+[89, ["string", "grid"], 376, 766, [88, null]],
+[90, ["storein", 0], 318, 682, [152, 91, 81, 88]],
+[91, ["string", "color"], 386, 682, [90, null]],
+[92, "box", 112, 974, [80, 93, null]],
+[93, ["string", "color"], 167, 974, [92, null]],
+[94, "setshade", 958, 234, [84, 95, 96]],
+[95, ["number", 50], 1043, 234, [94, null]],
+[96, "setcolor", 958, 276, [94, 97, 100]],
+[97, ["random", 0], 1035, 276, [96, 98, 99, null]],
+[98, ["number", 10], 1121, 276, [97, null]],
+[99, ["number", 20], 1121, 318, [97, null]],
+[100, ["vspace", 0], 958, 318, [96, 101]],
+[101, "setgray", 958, 360, [100, 102, null]],
+[102, ["random", 0], 1031, 360, [101, 103, 104, null]],
+[103, ["number", 80], 1117, 360, [102, null]],
+[104, ["number", 100], 1117, 402, [102, null]],
+[105, "setshade", 638, 234, [86, 106, 107]],
+[106, ["number", 40], 723, 234, [105, null]],
+[107, "setcolor", 638, 276, [105, 108, 111]],
+[108, ["random", 0], 715, 276, [107, 109, 110, null]],
+[109, ["number", 35], 801, 276, [108, null]],
+[110, ["number", 65], 801, 318, [108, null]],
+[111, ["vspace", 0], 638, 318, [107, 112]],
+[112, "setgray", 638, 360, [111, 113, null]],
+[113, ["random", 0], 711, 360, [112, 114, 115, null]],
+[114, ["number", 80], 797, 360, [113, null]],
+[115, ["number", 100], 797, 402, [113, null]],
+[116, ["hat", 126], 300, 460, [null, 117, 149]],
+[117, ["string", "grid 1"], 356, 472, [116, null]],
+[118, ["hat", 126], 640, 460, [null, 119, 3]],
+[119, ["string", "grid 2"], 696, 472, [118, null]],
+[120, ["hat", 126], 940, 460, [null, 121, 143]],
+[121, ["string", "grid 3"], 996, 472, [120, null]],
+[122, "stack", 18, 310, [32, 123, 124]],
+[123, ["string", "grid 1"], 76, 310, [122, null]],
+[124, "stack", 18, 352, [122, 125, 126]],
+[125, ["string", "grid 2"], 76, 352, [124, null]],
+[126, "stack", 18, 394, [124, 127, null]],
+[127, ["string", "grid 3"], 76, 394, [126, null]],
+[128, "penup", 18, 514, [82, 129]],
+[129, ["setxy2", 20], 18, 556, [128, 155, 156, 132]],
+[130, "leftpos", 130, 556, [155, null]],
+[131, "bottompos", 130, 638, [156, null]],
+[132, "pendown", 18, 680, [129, 23]],
+[133, ["storein", 0], 958, 682, [146, 134, 135, 136]],
+[134, ["string", "color"], 1026, 682, [133, null]],
+[135, ["string", "color 3"], 1026, 724, [133, null]],
+[136, "stack", 958, 766, [133, 137, null]],
+[137, ["string", "grid"], 1016, 766, [136, null]],
+[138, ["storein", 0], 658, 682, [57, 139, 140, 141]],
+[139, ["string", "color"], 726, 682, [138, null]],
+[140, ["string", "color 2"], 726, 724, [138, null]],
+[141, "stack", 658, 766, [138, 142, null]],
+[142, ["string", "grid"], 716, 766, [141, null]],
+[143, ["storein", 0], 958, 514, [120, 144, 145, 146]],
+[144, ["string", "side"], 1026, 514, [143, null]],
+[145, ["number", 64.0], 1026, 556, [143, null]],
+[146, ["storein", 0], 958, 598, [143, 147, 148, 133]],
+[147, ["string", "offset"], 1026, 598, [146, null]],
+[148, ["number", 32.0], 1026, 640, [146, null]],
+[149, ["storein", 0], 318, 514, [116, 150, 151, 152]],
+[150, ["string", "side"], 386, 514, [149, null]],
+[151, ["number", 128.0], 386, 556, [149, null]],
+[152, ["storein", 0], 318, 598, [149, 153, 154, 90]],
+[153, ["string", "offset"], 386, 598, [152, null]],
+[154, ["number", 0], 386, 640, [152, null]],
+[155, ["plus2", 0], 76, 556, [129, 130, 157]],
+[156, ["plus2", 0], 76, 638, [129, 131, 159]],
+[157, "box", 130, 598, [155, 158, null]],
+[158, ["string", "offset"], 185, 598, [157, null]],
+[159, "box", 130, 680, [156, 160, null]],
+[160, ["string", "offset"], 185, 680, [159, null]]]
