@@ -83,6 +83,8 @@
   * fixed several format issues with saved SVG
   * saving SVG thumbnail to server along with project file
   * seeding SVG with bg color on run
+  * failed experimenting with zoom and scroll settings
+  * fixed rounding bug in repeat code
 
 TODO:
   * don't save full-sized bitmap to session
